shell/app/modules/project/pages/release/components/form.scss
.release-form {
  .render-form.ant-form-vertical {
    width: 80%;
  }

  .ant-btn {
    background-color: $color-default-06;
    border-color: $color-default-06;
    color: $color-default-8;
  }

  .ant-btn-primary {
    background-color: $color-default;
    color: $white;
  }

  .ant-form-item-control-input-content > input {
    width: 50%;
    background-color: $color-default-04 !important;
    border: none;
  }
}

